test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/0_name/unknown/UNDEFINED_REF.t
function g():void;

function f():void
{
    @static_test { expect_message={ level="LEVEL_ERROR", id="UNDEFINED_REF", parameter={ ID="g" } } }
    g();
}
